--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 # 环境 开发dev，测试test，生产prod
 spring.profiles.active=dev
+
+
+#查询A股市场所有股票
+ths.a.mark.stocks.url=http://q.10jqka.com.cn/index/index/board/all/field/zdf/order/desc/page/{page}/ajax/1/
+#查询个股当天收盘数据
+ths.stock.close.data.url=http://d.10jqka.com.cn/v2/realhead/hs_{num}/last.js
+#查询个股当天资金成交数据
+ths.stock.trade.data.url=http://stockpage.10jqka.com.cn/spService/{num}/Funds/realFunds
