移除hadoop相关的代码，增加文件上传、下载相关功能

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -61,3 +61,9 @@ wx:
         token: wxcms
         aesKey: R3Ccc2ul1CVJQQl048DKhTGrKwGOZX5yLBsYXwk2Prf
 
+
+
+file:
+  download:
+    basepath: D:/data/stock/
+
