--- a/src/main/resources/application-lprod.yml
+++ b/src/main/resources/application-lprod.yml
@@ -23,7 +23,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     druid:
-      url: jdbc:mysql://127.0.0.1:3306/stock?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+      url: jdbc:mysql://118.89.122.231:3306/stock?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
       username: stock
       password: stock123
       initial-size: 10
@@ -62,7 +62,6 @@ wx:
         aesKey: R3Ccc2ul1CVJQQl048DKhTGrKwGOZX5yLBsYXwk2Prf
 
 
-
 file:
   download:
-    basepath: /home/stock/data/
+    basepath: D:/data/stock/
