--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # 环境 开发dev，测试test，生产prod
-spring.profiles.active=dev
+spring.profiles.active=lprod
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
 
 #查询A股市场所有股票
 ths.a.mark.stocks.url=http://q.10jqka.com.cn/index/index/board/all/field/zdf/order/desc/page/{page}/ajax/1/
