增加上传demon-stock图片到微信服务号临时素材相关代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 环境 开发dev，测试test，生产prod
-spring.profiles.active=dev
+spring.profiles.active=lprod
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
@@ -10,3 +10,5 @@ ths.a.mark.stocks.url=http://q.10jqka.com.cn/index/index/board/all/field/zdf/ord
 ths.stock.close.data.url=http://d.10jqka.com.cn/v2/realhead/hs_{num}/last.js
 #查询个股当天资金成交数据
 ths.stock.trade.data.url=http://stockpage.10jqka.com.cn/spService/{num}/Funds/realFunds
+#调用phantomjs服务生成图片
+phantomjs.service.url=http://39.100.44.146:8100/phantomjs/genPic?htmlTag={htmlTag}&fileName={fileName}&width={width}&height={height}
